# Cutana

./: .flake8  .gitignore  .vulture_whitelist.py  CITATION.cff  LICENSE.txt  README.md  colours.txt  conftest.py  environment.yml  playwright.config.py  pyproject.toml  run_playwright_tests.py
.github/ISSUE_TEMPLATE/: release.md
.github/workflows/: check_headers.yml  dead_code.yml  deploy_to_pypi.yml  deploy_to_test_pypi.yml  ruff_imports.yml  run_tests.yml
benchmarking/: benchmark_q1_datalabs.py  benchmark_q1_tiles.py  benchmark_utils.py
cutana/: __init__.py  catalogue_preprocessor.py  constants.py  cutout_extraction.py  cutout_process.py  cutout_writer_fits.py  cutout_writer_zarr.py  deployment_validator.py  fits_dataset.py  fits_reader.py  get_default_config.py  image_processor.py  job_creator.py  job_tracker.py  loadbalancer.py  logging_config.py  normalisation_parameters.py  orchestrator.py  performance_profiler.py  preview_generator.py  process_status_reader.py  process_status_writer.py  progress_report.py  system_monitor.py  validate_config.py
cutana_ui/: README.md  app.py  styles.py
cutana_ui/main_screen/: configuration_panel.py  main_screen.py  preview_panel.py  status_panel.py
cutana_ui/start_screen/: configuration_component.py  file_selection.py  output_folder.py  start_screen.py
cutana_ui/utils/: backend_interface.py  markdown_loader.py  svg_loader.py
cutana_ui/widgets/: configuration_widget.py  file_chooser.py  header_version_help.py  loading_spinner.py  normalisation_config_widget.py
examples/: Cutana_IDR1_Setup.ipynb  backend_demo.ipynb  cutana_ui_demo.ipynb
paper_scripts/: README.md  astropy_baseline.py  benchmark_config.toml  create_latex_values.py  create_results.py  create_test_catalogues.py  plots.py  recreate_plots.py  run_astropy_subprocess.py  run_framework_comparison.py  run_memory_profile.py  run_scaling_study.py  run_test.py
tests/cutana/: test_deployment_validator.py
tests/cutana/e2e/: __init__.py  test_e2e_channel_combinations.py  test_e2e_loadbalancer.py  test_e2e_loadbalancer_memory.py  test_e2e_padding_edge_cases.py  test_e2e_padding_factor.py  test_e2e_preview_generator.py  test_e2e_raw_cutout.py  test_e2e_streaming_raw_cutout.py  test_e2e_zarr_validation.py  test_streaming_orchestrator.py
tests/cutana/integration/: test_image_processor_integration.py  test_multi_channel_zarr_integration.py  test_multi_resolution_channel_processing.py  test_zarr_append.py  test_zarr_chunk_optimization.py
tests/cutana/unit/: test_catalogue_preprocessor.py  test_catalogue_streamer.py  test_channel_order_validation.py  test_cutout_extraction.py  test_cutout_extraction_coverage.py  test_cutout_process.py  test_cutout_process_progress.py  test_cutout_writer_fits.py  test_cutout_writer_zarr.py  test_default_config.py  test_fits_dataset.py  test_fits_reader.py  test_flux_conversion.py  test_image_processor.py  test_job_creator.py  test_job_tracker.py  test_loadbalancer.py  test_loadbalancer_memory.py  test_logging_config.py  test_normalisation_crop.py  test_orchestrator.py  test_padding_factor_validation.py  (+5 more)
tests/playwright/: conftest.py  test_cutout_processing_e2e.py  test_main_screen_e2e.py  test_start_screen_workflow.py  test_voila_server_basic.py
tests/test_data/: generate_test_data.py
tests/ui/: __init__.py  test_app.py  test_backend_sync.py  test_config_only.py  test_enhanced_progress_display.py  test_file_selection.py  test_main_screen.py  test_output_folder.py  test_start_screen.py  test_status_panel.py  test_status_panel_e2e.py  test_stop_kill_functionality.py  test_widgets.py
