[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cutana"
version = "0.1.0"
description = "High-performance Python tool for creating astronomical image cutouts"
readme = "README.md"
authors = [{ name = "European Space Agency", email = "pablo.gomez@esa.int" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Astronomy",
]
requires-python = ">=3.10"
dependencies = [
    "astropy>=5.0",
    "dotmap>=1.3",
    "images-to-zarr>=0.3.5",
    "ipyfilechooser>=0.6",
    "ipykernel==6.30.1",
    "ipywidgets",
    "fitsbolt>=0.1.5",
    "loguru>=0.6",
    "matplotlib>=3.5",
    "numpy>=1.20",
    "pandas>=1.3",
    "portalocker>=2.0",
    "psutil>=5.8",
    "toml>=0.10",
    "tqdm>=4.60",
]

[project.optional-dependencies]
ui = ["voila"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "pytest-asyncio>=0.21",
    "black>=22.0",
    "flake8>=5.0",
    "playwright>=1.40",
    "pytest-playwright>=0.4",
]
all = ["cutana[ui,dev]"]

[project.urls]
Homepage = "https://github.com/ESA/cutana"
Repository = "https://github.com/ESA/cutana"
Issues = "https://github.com/ESA/cutana/issues"


[tool.setuptools.packages.find]
include = ["cutana*", "cutana_ui*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
cutana_ui = ["*.css", "*.js", "*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=cutana",
    "--cov=cutana_ui",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-m",
    "not playwright",            # Skip Playwright tests by default
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "ui: marks tests as UI tests (requires display)",
    "asyncio: marks tests as async (requires pytest-asyncio)",
    "playwright: marks tests as Playwright e2e tests (requires browser)",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "E501", "W503", "W293", "W291", "F541", "F841"]
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    "*.egg-info",
    ".venv",
    "venv",
    "env",
    ".pytest_cache",
    "htmlcov",
    "logs",
    "tmp",
    "screenshots",
    "workflow_*.json",
    "tracking*.json",
    ".csv",
]

[tool.coverage.run]
source = ["cutana", "cutana_ui"]
omit = ["*/tests/*", "*/test_*.py", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc|\\.)?abstractmethod",
]

# Playwright configuration
[tool.pytest_playwright]
screenshot_mode = "only-on-failure"
video_mode = "retain-on-failure"
trace_mode = "retain-on-failure"
slow_mo = 1000
